Request Form Made

--- a/views/includes/aside-dashboard.ejs
+++ b/views/includes/aside-dashboard.ejs
@@ -54,7 +54,14 @@
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Goods Request Form
-                <span class="right badge badge-danger">New</span>
+              </p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="/all-goods-request" class="nav-link">
+              <i class="nav-icon fas fa-th"></i>
+              <p>
+                All Goods Requests
               </p>
             </a>
           </li>
