--- a/views/approved-goods.ejs
+++ b/views/approved-goods.ejs
@@ -41,30 +41,15 @@
             <% goods.forEach((good) => { %>
             <div class="card">
                 <div class="card-body">
-                    <span class="float-right h5">
-                      <form id="deleteGoodsRequest_form" action="deleteRequest/<%= good.id %>" method="POST">
-                        <button type="button" id="<%= good.id %>" class="deleteGoodsRequest btn btn-danger">
-                            <i class="fas fa-trash"></i>
-                            Delete 
-                        </button>
-                      </form>
+                    <span class="float-right h6">
+                        <a href="<%= good.attachment_URL %>" target="_blank" download class="card-link">
+                            <i class="fas fa-download"></i>
+                            Download the Attachment
+                        </a>
                     </span>
                     <small class="text-center mb-2">
                         <%= good.date.toDateString() %>
                     </small>
-                    <br>
-                    <% if (good.rejected == false) { %>
-                      <% if (good.approved == false) { %>
-                        <p class="h5 mt-2 text-primary">Not Approved Yet</p>
-                      <% } else{ %>
-                        <p class="h5 mt-2 text-success">Approved</p>
-                      <% } %>
-
-                    <% } else{ %>  
-                      <p class="h5 mt-2 text-danger">Rejected</p>
-                    <% } %>
-
-                    
                     <br>
                     <h5 class="card-title"><%= good.title %></h5> <br> <br>
                     <h6 class="card-subtitle mb-2 text-muted">Vendors Name: <%= good.vendor_name %></h6>
@@ -72,17 +57,11 @@
                     <h6 class="card-subtitle mb-2 text-muted">Purchase Order Number: <%= good.purchase_order_number %></h6>
                     <p class="card-text">Quatation Details: <%= good.quotation_details %></p>
                     <p class="card-text">Product Purchased Details: <%= good.product_purchased_details %></p>
-                    <a href="<%= good.attachment_URL %>" target="_blank" download class="card-link">
-                        <i class="fas fa-download"></i>
-                        Download the Attachment
-                    </a>
-                    <% if (good.rejected == false) { %>
-                      <a href="/editGoodsRequest/<%= good.id %>" class="ml-4">
-                        <i class="fas fa-edit"></i>
-                        Edit 
-                      </a>
-                   <% } %>
-                    
+                    <form action="#!" class="form-group mt-2" method="POST">
+                        <button class="btn btn-success">
+                            Send to Vendors
+                        </button>
+                    </form>
                 </div>
             </div>
             <% }); %>
