--- a/views/includes/aside-dashboard.ejs
+++ b/views/includes/aside-dashboard.ejs
@@ -8,7 +8,7 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-          <img src="dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+          <img src="/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
           <a href="#" class="d-block"><%= name %></a>
@@ -49,6 +49,7 @@
               </li>
             </ul>
           </li>
+          <% if (userType == 'admin') { %>
           <li class="nav-item">
             <a href="/goods-request-form" class="nav-link">
               <i class="nav-icon fas fa-th"></i>
@@ -57,14 +58,53 @@
               </p>
             </a>
           </li>
-          <li class="nav-item">
-            <a href="/all-goods-request" class="nav-link">
-              <i class="nav-icon fas fa-th"></i>
-              <p>
-                All Goods Requests
-              </p>
-            </a>
-          </li>
+          <% } %>
+
+          <% if (userType == 'admin') { %>
+            <li class="nav-item">
+              <a href="/all-goods-request" class="nav-link">
+                <i class="nav-icon fas fa-th"></i>
+                <p>
+                  All Goods Requests
+                </p>
+              </a>
+            </li>
+          <% } %>
+
+          <% if (userType == 'admin') { %>
+            <li class="nav-item">
+              <a href="/approved" class="nav-link">
+                <i class="nav-icon fas fa-th"></i>
+                <p>
+                  Goods Request Approved
+                </p>
+              </a>
+            </li>
+          <% } %>
+
+          <% if (userType == 'admin') { %>
+            <li class="nav-item">
+              <a href="/rejectedGoods" class="nav-link">
+                <i class="nav-icon fas fa-th"></i>
+                <p>
+                  Goods Request Rejected
+                </p>
+              </a>
+            </li>
+          <% } %>
+
+          <% if (userType == 'registar') { %>
+            <li class="nav-item">
+              <a href="/goods-requests" class="nav-link">
+                <i class="nav-icon fas fa-th"></i>
+                <p>
+                  Goods Requests
+                </p>
+              </a>
+            </li>
+          <% } %>
+
+
           <li class="nav-item has-treeview">
             <a href="#" class="nav-link">
               <i class="nav-icon fas fa-copy"></i>
