Cloud Icon Added

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,7 +1,7 @@
 <section class="hold-transition login-page">
 <div class="login-box">
   <div class="login-logo">
-    <a href="/"><b>Inventory</b>System</a>
+    <a href="/"><b>Inventory</b> <i class="fas text-primary fa-cloud"></i> System</a>
   </div>
   <!-- /.login-logo -->
   <div class="card">
