--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,7 +13,7 @@
 <section class="hold-transition register-page">
 <div class="register-box">
   <div class="register-logo">
-    <a href="/"><b>Inventory</b>System</a>
+    <a href="/"><b>Inventory</b> <i class="fas text-primary fa-cloud"></i> System</a>
   </div>
   <div class="card">
     <div class="card-body register-card-body">
