--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -75,7 +75,9 @@
 <!-- AdminLTE App -->
 <script src="/dist/js/adminlte.js"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-
+<script src="/dist/js/pages/dashboard.js"></script>
+<!-- AdminLTE for demo purposes -->
+<script src="/dist/js/demo.js"></script>
 
 <script src="/src/js/config.js"></script>
 <script src="/src/js/main.js"></script>
