Search Fields Quatation Started

--- a/views/all-goods-request.ejs
+++ b/views/all-goods-request.ejs
@@ -22,6 +22,14 @@
           </div>
         </div><!-- /.container-fluid -->
       </section>
+
+      <section class="content">
+        <form action="/searchgoods" class="form-group" method="POST">
+          <label for="exampleInputEmail1">Search Goods Record</label>
+          <input type="search" name="search" id="search" placeholder="Search By Title..." class="form-control">
+          <button type="submit" class="btn-primary mt-2 btn">Search</button>
+        </form>
+      </section>
   
       <!-- Main content -->
       <section class="content">
