Searching for Goods and Quatation Made

--- a/views/all-quatations-send.ejs
+++ b/views/all-quatations-send.ejs
@@ -48,7 +48,10 @@
           <div class="card-body">
             <% if (quatations[0] == null) { %>
                 <div class="card">
-                    <h2>Nothing Found!</h2>
+                    <center>
+                      <h4>Nothing Found!</h4>
+                      <img src="/dist/img/nothing-found.gif" class="img w-25 img-fluid" alt="Nothing Found" srcset="">
+                    </center>
                 </div>
             <% } else { %>
               <% quatations.forEach((quatation) => { %>
