--- a/views/all-goods-request.ejs
+++ b/views/all-goods-request.ejs
@@ -46,54 +46,64 @@
             </div>
           </div>
           <div class="card-body">
+            <% if (goods[0] == null) { %>
+              <div class="card">
+                  <center>
+                    <h4>Nothing Found!</h4>
+                    <img src="/dist/img/nothing-found.gif" class="img w-25 img-fluid" alt="Nothing Found" srcset="">
+                  </center>
+              </div>
+          <% } else { %>
             <% goods.forEach((good) => { %>
-            <div class="card">
-                <div class="card-body">
-                    <span class="float-right h5">
-                      <form id="deleteGoodsRequest_form" action="deleteRequest/<%= good.id %>" method="POST">
-                        <button type="button" id="<%= good.id %>" class="deleteGoodsRequest btn btn-danger">
-                            <i class="fas fa-trash"></i>
-                            Delete 
-                        </button>
-                      </form>
-                    </span>
-                    <small class="text-center mb-2">
-                        <%= good.date.toDateString() %>
-                    </small>
-                    <br>
-                    <% if (good.rejected == false) { %>
-                      <% if (good.approved == false) { %>
-                        <p class="h5 mt-2 text-primary">Not Approved Yet</p>
-                      <% } else{ %>
-                        <p class="h5 mt-2 text-success">Approved</p>
+              <div class="card">
+                  <div class="card-body">
+                      <span class="float-right h5">
+                        <form id="deleteGoodsRequest_form" action="deleteRequest/<%= good.id %>" method="POST">
+                          <button type="button" id="<%= good.id %>" class="deleteGoodsRequest btn btn-danger">
+                              <i class="fas fa-trash"></i>
+                              Delete 
+                          </button>
+                        </form>
+                      </span>
+                      <small class="text-center mb-2">
+                          <%= good.date.toDateString() %>
+                      </small>
+                      <br>
+                      <% if (good.rejected == false) { %>
+                        <% if (good.approved == false) { %>
+                          <p class="h5 mt-2 text-primary">Not Approved Yet</p>
+                        <% } else{ %>
+                          <p class="h5 mt-2 text-success">Approved</p>
+                        <% } %>
+  
+                      <% } else{ %>  
+                        <p class="h5 mt-2 text-danger">Rejected</p>
                       <% } %>
-
-                    <% } else{ %>  
-                      <p class="h5 mt-2 text-danger">Rejected</p>
-                    <% } %>
-
-                    
-                    <br>
-                    <h5 class="card-title"><%= good.title %></h5> <br> <br>
-                    <h6 class="card-subtitle mb-2 text-muted">Vendors Name: <%= good.vendor_name %></h6>
-                    <h6 class="card-subtitle mb-2 text-muted">Address: <%= good.address %></h6>
-                    <h6 class="card-subtitle mb-2 text-muted">Purchase Order Number: <%= good.purchase_order_number %></h6>
-                    <p class="card-text">Quatation Details: <%= good.quotation_details %></p>
-                    <p class="card-text">Product Purchased Details: <%= good.product_purchased_details %></p>
-                    <a href="<%= good.attachment_URL %>" target="_blank" download class="card-link">
-                        <i class="fas fa-download"></i>
-                        Download the Attachment
-                    </a>
-                    <% if (good.rejected == false) { %>
-                      <a href="/editGoodsRequest/<%= good.id %>" class="ml-4">
-                        <i class="fas fa-edit"></i>
-                        Edit 
+  
+                      
+                      <br>
+                      <h5 class="card-title"><%= good.title %></h5> <br> <br>
+                      <h6 class="card-subtitle mb-2 text-muted">Vendors Name: <%= good.vendor_name %></h6>
+                      <h6 class="card-subtitle mb-2 text-muted">Address: <%= good.address %></h6>
+                      <h6 class="card-subtitle mb-2 text-muted">Purchase Order Number: <%= good.purchase_order_number %></h6>
+                      <p class="card-text">Quatation Details: <%= good.quotation_details %></p>
+                      <p class="card-text">Product Purchased Details: <%= good.product_purchased_details %></p>
+                      <a href="<%= good.attachment_URL %>" target="_blank" download class="card-link">
+                          <i class="fas fa-download"></i>
+                          Download the Attachment
                       </a>
-                   <% } %>
-                    
-                </div>
-            </div>
-            <% }); %>
+                      <% if (good.rejected == false) { %>
+                        <a href="/editGoodsRequest/<%= good.id %>" class="ml-4">
+                          <i class="fas fa-edit"></i>
+                          Edit 
+                        </a>
+                     <% } %>
+                      
+                  </div>
+              </div>
+              <% }); %>
+          <% } %>
+            
           </div>
           <!-- /.card-body -->
           <div class="card-footer">
