--- a/views/all-goods-request.ejs
+++ b/views/all-goods-request.ejs
@@ -30,6 +30,13 @@
           <button type="submit" class="btn-primary mt-2 btn">Search</button>
         </form>
       </section>
+
+      <section class="mt-2 mb-2 content">
+          <button id="generateReport-btn" type="button" class="btn btn-success">
+            <i class="fas mr-1 fa-file-excel"></i>
+            Export Excel
+          </button>
+      </section>
   
       <!-- Main content -->
       <section class="content">
@@ -58,7 +65,7 @@
               <div class="card">
                   <div class="card-body">
                       <span class="float-right h5">
-                        <form id="deleteGoodsRequest_form" action="deleteRequest/<%= good.id %>" method="POST">
+                        <form id="deleteGoodsRequest_form" action="/deleteRequest/<%= good.id %>" method="POST">
                           <button type="button" id="<%= good.id %>" class="deleteGoodsRequest btn btn-danger">
                               <i class="fas fa-trash"></i>
                               Delete 
@@ -82,21 +89,18 @@
   
                       
                       <br>
-                      <h5 class="card-title"><%= good.title %></h5> <br> <br>
-                      <h6 class="card-subtitle mb-2 text-muted">Vendors Name: <%= good.vendor_name %></h6>
-                      <h6 class="card-subtitle mb-2 text-muted">Address: <%= good.address %></h6>
-                      <h6 class="card-subtitle mb-2 text-muted">Purchase Order Number: <%= good.purchase_order_number %></h6>
-                      <p class="card-text">Quatation Details: <%= good.quotation_details %></p>
-                      <p class="card-text">Product Purchased Details: <%= good.product_purchased_details %></p>
-                      <a href="<%= good.attachment_URL %>" target="_blank" download class="card-link">
-                          <i class="fas fa-download"></i>
-                          Download the Attachment
-                      </a>
-                      <% if (good.rejected == false) { %>
-                        <a href="/editGoodsRequest/<%= good.id %>" class="ml-4">
-                          <i class="fas fa-edit"></i>
-                          Edit 
-                        </a>
+                      <h5 class="card-title"><%= good.purpose %></h5> <br> <br>
+                      <h6 class="card-subtitle mb-2 text-muted">Requested By: <%= good.request_by %></h6>
+                      <h6 class="card-subtitle mb-2 text-muted">Item: <%= good.item %></h6>
+                      <h6 class="card-subtitle mb-2 text-muted">Specification: <%= good.specification %></h6>
+                      <% if (good.approved == false) { %>
+                        <% if (good.rejected == false) { %>
+                          <a href="/editGoodsRequest/<%= good.id %>" class="btn btn-info">
+                            <i class="fas fa-edit"></i>
+                            Edit the Request
+                          </a>
+                        <% } else { %>
+                        <% } %>
                      <% } %>
                       
                   </div>
