--- a/views/goodsrequestsvendors.ejs
+++ b/views/goodsrequestsvendors.ejs
@@ -46,16 +46,11 @@
                     </small>
                     <br>
                     <br>
-                    <h5 class="card-title"><%= good.title %></h5> <br> <br>
-                    <h6 class="card-subtitle mb-2 text-muted">Vendors Name: <%= good.vendor_name %></h6>
-                    <h6 class="card-subtitle mb-2 text-muted">Address: <%= good.address %></h6>
-                    <h6 class="card-subtitle mb-2 text-muted">Purchase Order Number: <%= good.purchase_order_number %></h6>
+                    <h5 class="card-title"><%= good.purpose %></h5> <br> <br>
+                    <h6 class="card-subtitle mb-2 text-muted">Request By: <%= good.request_by %></h6>
+                    <h6 class="card-subtitle mb-2 text-muted">Item: <%= good.item %></h6>
+                    <h6 class="card-subtitle mb-2 text-muted">Specification: <%= good.specification %></h6>
                     <p class="card-text">Quatation Details: <%= good.quotation_details %></p>
-                    <p class="card-text">Product Purchased Details: <%= good.product_purchased_details %></p>
-                    <a href="<%= good.attachment_URL %>" target="_blank" download class="card-link">
-                        <i class="fas fa-download"></i>
-                        Download the Attachment
-                    </a>
                     <br>
                     <a class="btn mt-2 btn-primary" href="/submitquatation/<%= good.id %>">
                         Submit Quatation
