--- a/views/includes/aside-dashboard.ejs
+++ b/views/includes/aside-dashboard.ejs
@@ -115,6 +115,17 @@
             </li>
           <% } %>
 
+          <% if (userType == 'admin') { %>
+            <li class="nav-item">
+              <a href="/purchase-order" class="nav-link">
+                <i class="nav-icon fas fa-th"></i>
+                <p>
+                  Purchase Order
+                </p>
+              </a>
+            </li>
+          <% } %>
+
           
           <!-- For Vendors -->
           <% if (userType == 'vendor') { %>
