--- a/views/purchase-order.ejs
+++ b/views/purchase-order.ejs
@@ -33,7 +33,7 @@
       <!-- Default box -->
       <div class="card">
         <div class="card-header">
-          <h3 class="card-title">Good Requirement Form</h3>
+          <h3 class="card-title">Good Request Form</h3>
           <div class="card-tools">
             <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
               <i class="fas fa-minus"></i></button>
@@ -42,34 +42,51 @@
         <div class="card-body">
           <div class="card card-primary">
               <div class="card-header">
-                <h3 class="card-title">Requirement Form</h3>
+                <h3 class="card-title">Request Form</h3>
               </div>
               <!-- /.card-header -->
               <!-- form start -->
-              <form action="/sendrequirementsitems" method="POST" role="form">
+              <form action="/goodsrequest" method="POST" role="form">
                 <div class="card-body">
+                  <div class="form-group">
+                    <label for="exampleInputEmail1">Title</label>
+                    <input type="text" class="form-control" id="title" name="title" placeholder="Title">
+                  </div>
+                  <div class="form-group">
+                    <label for="exampleInputEmail1">Vendor Name</label>
+                    <input type="text" class="form-control" id="vendorname" name="vendorname" placeholder="Vendor Name">
+                  </div>
                   <div class="row">
-                    <div class="col">
-                      <div class="form-group">
-                        <label for="exampleInputEmail1">Request By</label>
-                        <input type="text" class="form-control" id="request_by" name="request_by" placeholder="Full Name">
+                      <div class="col">
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Address</label>
+                            <input required type="text" class="form-control" id="address" name="address" placeholder="Address">
+                        </div>
                       </div>
-                    </div>
-                    <div class="col">
-                      <div class="form-group">
-                        <label for="exampleInputEmail1">Purpose</label>
-                        <input type="text" class="form-control" id="purpose" name="purpose" placeholder="Title">
+                      <div class="col">
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Purchase Order number(Doc no)</label>
+                            <input required type="text" class="form-control" id="purchaseordernumber" name="purchaseordernumber" placeholder="Purchase Order number(Doc no)">
+                        </div>
                       </div>
-                    </div>
                   </div>
                   <div class="form-group">
-                    <label for="exampleInputEmail1">Item Name</label>
-                    <input type="text" class="form-control" id="item" name="item" placeholder="Item Name">
+                    <label for="exampleInputEmail1">Quotation Details</label>
+                    <textarea required class="form-control" id="quotationdetails" name="quotationdetails" rows="3" placeholder="Enter ..."></textarea>
                   </div>
                   <div class="form-group">
-                    <label for="exampleInputEmail1">Item Specifications</label>
-                    <textarea required class="form-control" id="specification" name="specification" rows="3" placeholder="Item Specification"></textarea>
+                    <label for="exampleInputEmail1">Details of product to be purchased</label>
+                    <textarea required class="form-control" id="productpurchased_details" name="productpurchased_details" rows="3" placeholder="Enter ..."></textarea>
                   </div>
+                  <div class="form-group">
+                    <label for="exampleInputEmail1">Attach Attachments</label>
+                    <div class="custom-file">
+                      <input type="file" class="custom-file-input" id="goodsRequestAttachment_btn">
+                      <input type="hidden" id="attachment_URL" name="attachment_URL" value="">
+                      <label class="custom-file-label" id="attachAttachment-File" for="customFile">Choose file</label>
+                    </div>
+                  </div>
+
                 </div>
                 <!-- /.card-body -->
 
