--- a/views/sendvendor.ejs
+++ b/views/sendvendor.ejs
@@ -37,33 +37,17 @@
         Send to All Vendors
       </a>
         <div class="card mt-2">
-            <div class="card-body">
-                <small class="text-center mb-2">
-                    <%= good.date.toDateString() %>
-                </small>
-                <br>
-                <% if (good.rejected == false) { %>
-                  <% if (good.approved == false) { %>
-                    <p class="h5 mt-2 text-primary">Not Approved Yet</p>
-                  <% } else{ %>
-                    <p class="h5 mt-2 text-success">Approved</p>
-                  <% } %>
-
-                <% } else{ %>  
-                  <p class="h5 mt-2 text-danger">Rejected</p>
-                <% } %>
-                <br>
-                <h5 class="card-title"><%= good.title %></h5> <br> <br>
-                <h6 class="card-subtitle mb-2 text-muted">Vendors Name: <%= good.vendor_name %></h6>
-                <h6 class="card-subtitle mb-2 text-muted">Address: <%= good.address %></h6>
-                <h6 class="card-subtitle mb-2 text-muted">Purchase Order Number: <%= good.purchase_order_number %></h6>
-                <p class="card-text">Quatation Details: <%= good.quotation_details %></p>
-                <p class="card-text">Product Purchased Details: <%= good.product_purchased_details %></p>
-                <a href="<%= good.attachment_URL %>" target="_blank" download class="card-link">
-                    <i class="fas fa-download"></i>
-                    Download the Attachment
-                </a>
-            </div>
+          <div class="card-body">
+            <small class="text-center mb-2">
+                <%= good.date.toDateString() %>
+            </small>
+            <br>
+            <h5 class="card-title"><%= good.purpose %></h5> <br> <br>
+            <h6 class="card-subtitle mb-2 text-muted">Request By: <%= good.request_by %></h6>
+            <h6 class="card-subtitle mb-2 text-muted">Item: <%= good.item %></h6>
+            <h6 class="card-subtitle mb-2 text-muted">Specification: <%= good.specification %></h6>
+            <p class="card-text">Quatation Details: <%= good.quotation_details %></p>
+        </div>
         </div>
 
       <div class="card">
