--- a/views/approved-goods.ejs
+++ b/views/approved-goods.ejs
@@ -50,8 +50,12 @@
                     <h6 class="card-subtitle mb-2 text-muted">Item: <%= good.item %></h6>
                     <h6 class="card-subtitle mb-2 text-muted">Specification: <%= good.specification %></h6>
                     <p class="card-text">Quatation Details: <%= good.quotation_details %></p>
-                    <a href="/sendvendors/<%= good.id %>" class="btn btn-success">
-                        Send to Vendors
+                    <a href="/purchase-order" class="btn btn-primary">
+                      Generate Purchase Order
+                    </a>
+                    
+                    <a href="/sendvendors/<%= good.id %>" class="btn btn-outline-info">
+                        Send Details to Vendors
                     </a>
                 </div>
             </div>
