--- a/views/includes/aside-dashboard.ejs
+++ b/views/includes/aside-dashboard.ejs
@@ -8,7 +8,7 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-          <img src="/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+          <img src="https://lh3.googleusercontent.com/proxy/b-XkMmGgwXzDRUfKnmKvULUKu7WMELgYJF0V1ddqbUHtGJte8hT_qlxJtC4ERBSwQmkvp-9oh5owSjIJ3bk2BCRFzX7AS7d4Tvh-U2MZUpvDxDXXoGgmAIbrHW99rkXbLbPRo7Y" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
           <a href="#" class="d-block"><%= name %></a>
@@ -20,7 +20,7 @@
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-          <li class="nav-item has-treeview menu-open">
+          <!-- <li class="nav-item has-treeview menu-open">
             <a href="#" class="nav-link active">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
@@ -48,7 +48,7 @@
                 </a>
               </li>
             </ul>
-          </li>
+          </li> -->
           <% if (userType == 'admin') { %>
           <li class="nav-item">
             <a href="/goods-request-form" class="nav-link">
@@ -165,7 +165,7 @@
           <% } %>
 
 
-          <li class="nav-item has-treeview">
+          <!-- <li class="nav-item has-treeview">
             <a href="#" class="nav-link">
               <i class="nav-icon fas fa-copy"></i>
               <p>
@@ -650,7 +650,7 @@
               <i class="nav-icon far fa-circle text-info"></i>
               <p>Informational</p>
             </a>
-          </li>
+          </li> -->
         </ul>
       </nav>
       <!-- /.sidebar-menu -->
