--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -38,7 +38,7 @@
       https://firebase.google.com/docs/web/setup#available-libraries -->
   <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-analytics.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-storage.js"></script>
-
+  <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-auth.js"></script>
 
 
 </head>
