--- a/views/main.ejs
+++ b/views/main.ejs
@@ -7,7 +7,7 @@
   <div class="card">
     <div class="card-body login-card-body">
       <p class="login-box-msg">Sign in to start your session</p>
-      <form action="/users/login" method="POST">
+      <form action="/users/login" id="signinUser-form" method="POST">
         <%- include('partials/messages')  %>
         <div class="input-group mb-3">
           <input type="email" id="email" name="email" value="<%= typeof email != 'undefined' ? email : '' %>" required="required" pattern="^(([-\w\d]+)(\.[-\w\d]+)*@([-\w\d]+)(\.[-\w\d]+)*(\.([a-zA-Z]{2,5}|[\d]{1,3})){1,2})$" class="form-control" placeholder="Email">
@@ -39,7 +39,7 @@
           </div>
           <!-- /.col -->
         </div>
-        <button type="submit" class="btn mt-4 mb-4 btn-primary btn-block">Sign In</button>
+        <button type="button" id="signinUser-btn" class="btn mt-4 mb-4 btn-primary btn-block">Sign In</button>
       </form>
 
       <p class="mb-1">
