--- a/views/includes/aside-dashboard.ejs
+++ b/views/includes/aside-dashboard.ejs
@@ -8,7 +8,7 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-          <img src="https://lh3.googleusercontent.com/proxy/b-XkMmGgwXzDRUfKnmKvULUKu7WMELgYJF0V1ddqbUHtGJte8hT_qlxJtC4ERBSwQmkvp-9oh5owSjIJ3bk2BCRFzX7AS7d4Tvh-U2MZUpvDxDXXoGgmAIbrHW99rkXbLbPRo7Y" class="img-circle elevation-2" alt="User Image">
+          <img src="https://library.kissclipart.com/20180918/wfq/kissclipart-avatar-windows-clipart-social-media-user-profile-c-8dbd576b78fa0d91.jpg" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
           <a href="#" class="d-block"><%= name %></a>
