Vendor Registration Added, Mailing for bulk checked, Footer Added

--- a/views/purchase-order.ejs
+++ b/views/purchase-order.ejs
@@ -186,6 +186,7 @@
     <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
+  <%- include('includes/footer-dashboard.ejs') %>
 
 
   <!-- Control Sidebar -->
