--- a/views/purchaseorder-sendvendor.ejs
+++ b/views/purchaseorder-sendvendor.ejs
@@ -105,7 +105,8 @@
       <!-- /.content -->
     </div>
     <!-- /.content-wrapper -->
-  
+    <%- include('includes/footer-dashboard.ejs') %>
+    
   
     <!-- Control Sidebar -->
     <aside class="control-sidebar control-sidebar-dark">
