--- a/views/sendvendor.ejs
+++ b/views/sendvendor.ejs
@@ -99,6 +99,7 @@
     <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
+  <%- include('includes/footer-dashboard.ejs') %>
 
 
   <!-- Control Sidebar -->
