--- a/views/includes/aside-dashboard.ejs
+++ b/views/includes/aside-dashboard.ejs
@@ -1,6 +1,6 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="/" class="brand-link">
+    <a href="/dashboard" class="brand-link">
       <span class="brand-text font-weight-light">Inventory Management</span>
     </a>
     <!-- Sidebar -->
