--- a/views/register.ejs
+++ b/views/register.ejs
@@ -43,7 +43,15 @@
                 <i class="fas fa-phone"></i>
               </div>
             </div>
+        </div>
+        <div class="input-group mb-3">
+          <input type="phone" id="address" name="address" value="<%= typeof address != 'undefined' ? address : '' %>" required="required" class="form-control" placeholder="Full Office Address">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <i class="fas fa-map-marker-alt"></i>
+            </div>
           </div>
+        </div>
         <div class="input-group mb-3">
           <input type="password" id="password" name="password" required="required" value="<%= typeof password != 'undefined' ? password : '' %>" class="form-control" placeholder="Password">
           <div class="input-group-append">
