--- a/views/rejectedGoods.ejs
+++ b/views/rejectedGoods.ejs
@@ -67,13 +67,8 @@
     </div>
     <!-- /.content-wrapper -->
   
-    <footer class="main-footer">
-      <div class="float-right d-none d-sm-block">
-        <b>Version</b> 3.0.3-pre
-      </div>
-      <strong>Copyright &copy; 2014-2019 <a href="http://adminlte.io">AdminLTE.io</a>.</strong> All rights
-      reserved.
-    </footer>
+    <%- include('includes/footer-dashboard.ejs') %>
+
   
     <!-- Control Sidebar -->
     <aside class="control-sidebar control-sidebar-dark">
