--- a/views/submit-quatation-form.ejs
+++ b/views/submit-quatation-form.ejs
@@ -127,6 +127,7 @@
     <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
+  <%- include('includes/footer-dashboard.ejs') %>
 
 
   <!-- Control Sidebar -->
