--- a/views/vendors.ejs
+++ b/views/vendors.ejs
@@ -159,6 +159,7 @@
     <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
+  <%- include('includes/footer-dashboard.ejs') %>
 
 
   <!-- Control Sidebar -->
