Quatation Number added

--- a/views/all-quatations-send.ejs
+++ b/views/all-quatations-send.ejs
@@ -74,8 +74,9 @@
                         <br>
                         <h5 class="card-title"><%= quatation.purpose %></h5> <br> <br>
                         <h6 class="card-subtitle mb-2 text-muted">Vendors Name: <%= quatation.vendor_name %></h6>
-                        <h6 class="card-subtitle mb-2 text-muted">Address: <%= quatation.email %></h6>
-                        <h6 class="card-subtitle mb-2 text-muted">Purchase Order Number: <%= quatation.phone %></h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Vendor Address: <%= quatation.email %></h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Vendor Phone Number: <%= quatation.phone %></h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Quatation ID: <%= quatation.id %></h6>
                         <a href="<%= quatation.quatation_URL %>" target="_blank" download class="card-link">
                             <i class="fas fa-download"></i>
                             Download the Quatation
