Quotation spelling corrected

--- a/views/includes/aside-dashboard.ejs
+++ b/views/includes/aside-dashboard.ejs
@@ -109,7 +109,7 @@
               <a href="/quatations-send" class="nav-link">
                 <i class="nav-icon fas fa-th"></i>
                 <p>
-                  Quatation Submitted
+                  Quotation Submitted
                 </p>
               </a>
             </li>
