--- a/views/all-quatations-send.ejs
+++ b/views/all-quatations-send.ejs
@@ -16,7 +16,7 @@
             <div class="col-sm-6">
               <ol class="breadcrumb float-sm-right">
                 <li class="breadcrumb-item"><a href="/">Home</a></li>
-                <li class="breadcrumb-item active">All Quatations</li>
+                <li class="breadcrumb-item active">All Quotations</li>
               </ol>
             </div>
           </div>
@@ -25,7 +25,7 @@
 
       <section class="content">
         <form action="/searchquatation" class="form-group" method="POST">
-          <label for="exampleInputEmail1">Search Quatations</label>
+          <label for="exampleInputEmail1">Search Quotation</label>
           <input type="search" name="search" id="search" placeholder="Search By Title..." class="form-control">
           <button type="submit" class="btn-primary mt-2 btn">Search</button>
         </form>
@@ -39,7 +39,7 @@
         <!-- Default box -->
         <div class="card">
           <div class="card-header">
-            <h3 class="card-title">All Quatations Submitted</h3>
+            <h3 class="card-title">All Quotations Submitted</h3>
             <div class="card-tools">
               <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
                 <i class="fas fa-minus"></i></button>
