Faculty Form Made

--- a/views/includes/aside-dashboard.ejs
+++ b/views/includes/aside-dashboard.ejs
@@ -165,6 +165,19 @@
           <% } %>
 
 
+          <!-- For Teachers -->
+          <% if (userType == 'faculty') { %>
+            <li class="nav-item">
+              <a href="/faculty/goods-request-form" class="nav-link">
+                <i class="nav-icon fas fa-th"></i>
+                <p>
+                  Make a Request
+                </p>
+              </a>
+            </li>
+          <% } %>
+
+
           <!-- <li class="nav-item has-treeview">
             <a href="#" class="nav-link">
               <i class="nav-icon fas fa-copy"></i>
