--- a/views/includes/navigation-dashboard.ejs
+++ b/views/includes/navigation-dashboard.ejs
@@ -99,10 +99,30 @@
           <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
         </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link h5 text-danger" data-slide="true" href="/users/logout">
-            Logout
-        </a>
-      </li>
+      
+      <% if (userType == 'faculty') { %>
+        <li class="nav-item">
+          <a class="nav-link h5 text-danger" data-slide="true" href="users/logoutFaculty">
+              Logout
+          </a>
+        </li>
+      <% } %>
+
+      <% if (userType == 'admin') { %>
+        <li class="nav-item">
+          <a class="nav-link h5 text-danger" data-slide="true" href="/users/logout">
+              Logout
+          </a>
+        </li>
+      <% } %>
+
+      <% if (userType == 'registar') { %>
+        <li class="nav-item">
+          <a class="nav-link h5 text-danger" data-slide="true" href="/users/logout">
+              Logout
+          </a>
+        </li>
+      <% } %>
+      
     </ul>
   </nav>
